--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <div class="caixa-principal">
-    <h1> Você decide o futuro da IA</h1>
-     <div class="caixa-pergunta"></div>
-    <div class="caixa-resposta"></div>
-     <div class="texto-resultado">
-     <p class="texto-resultado"></p>
-                </div>
-            </div>
-    
+        <h1>Você decide o futuro da IA</h1>
+        <div class="caixa-pergunta"></div>
+        <div class="caixa-resposta"></div>
+        <div class="caixa-resultado">
+            <p class="texto-resultado"></p>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
