--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Você decide o futuro da IA</title>
     <link rel="stylesheet" href="style.css">
+    <title>Será que você sabe?</title> <!-- texto do cabeçalho -->
 </head>
+<!-- corpo da caixa -->
+
 <body>
     <div class="caixa-principal">
-        <h1>Você decide o futuro da IA</h1>
-        <div class="caixa-pergunta"></div>
-        <div class="caixa-resposta"></div>
-        <div class="caixa-resultado">
-            <p class="texto-resultado"></p>
-        </div>
+        <h1>Será que você sabe?</h1> <!--texto da Questionário caixa -->
+        <div class="caixa-perguntas"></div>
+        <div class="caixa-alternativas"></div>
+    </div>
+    <div class="caixa-resultado">
+        <p class="texto-resultado"></p>
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
