--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="caixa-principal">
-        <img src="image/png-transparent-green-wave-106-5-fm-question-questions-and-answers-love-text-logo (1).png" alt="">
+        <img src="image/png-transparent-green-wave-106-5-fm-question-questions-and-answers-love-text-logo-removebg-preview.png" alt="">
         <h1>Será que você sabe?</h1> <!--texto da Questionário caixa -->
         <div class="caixa-perguntas"></div>
         <div class="caixa-alternativas"></div>
