--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="caixa-principal">
         <img src="image/png-transparent-green-wave-106-5-fm-question-questions-and-answers-love-text-logo-removebg-preview.png" alt="">
-        <h1>Será que você sabe?</h1> <!--texto da Questionário caixa -->
+        <h1>Será que você sabe?</h1> <!--texto do Questionário caixa -->
         <div class="caixa-perguntas"></div>
         <div class="caixa-alternativas"></div>
     </div>
